Sat Jun 18 02:22:26 CEST 2005 (tk)
----------------------------------
  * libclamav/mspack/cabd.c: fix possible infinite loop

Sat Jun 18 01:55:58 CEST 2005 (tk)
----------------------------------
  * sigtool/vba.c: revert incorrect logg() patch (thanks to Trog)

Sat Jun 18 01:32:28 CEST 2005 (tk)
----------------------------------
  * docs: update

Mon Jun 13 11:49:04 CEST 2005 (tk)
----------------------------------
  * libclamav/cvd.c: fix potential directory traversal in cvd unpacker (a low
		     risk problem since all databases are digitally signed).
		     Pointed out by Florian Weimer <fw*deneb.enyo.de>

Sun Jun 12 11:24:59 CEST 2005 (tk)
----------------------------------
  * clamscan: improve output handling

Wed Jun  8 16:01:22 CEST 2005 (tk)
----------------------------------
  * libclamav/zziplib/zzip-file.c: add method id for AES encrypted archives
    (thanks to David Majorel <dm*lagoon.nc>). 

Wed Jun  8 15:37:34 CEST 2005 (tk)
----------------------------------
  * clamscan/manager.c: better message on zip/rar unpacking error

Tue Jun  7 03:34:25 CEST 2005 (tk)
----------------------------------
  * Simplify output handling in all programs: move most of the logic of how
    to handle output into the logg() function, and change all of the programs
    to use logg(). Patch by Stephen Gran <steve*lobefin.net>

Sun Jun  5 06:58:45 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Better error message if the white-list file can't be
				opened

Thu Jun  2 20:04:04 CEST 2005 (tk)
----------------------------------
  * libclamav: remove support for CL_SCAN_DISABLERAR (RAR unpacker is now
	       enabled with CL_SCAN_ARCHIVE)

Thu Jun  2 08:56:39 BST 2005 (njh)
----------------------------------
  * libclamav/pdf.c:	Handle ascii85encoded streams that are full of z's.
				Reported by "Kevin Heneveld" <kevin at
				northstar.k12.ak.us>

Wed Jun  1 17:20:07 BST 2005 (njh)
----------------------------------